--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,40 +4,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-         
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    
     <display-name>TestWS</display-name>
-
     <servlet>
         <servlet-name>ServletAdaptor</servlet-name>
-        <!-- Usando la clase actualizada de Jersey 2.x -->
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <description>Multiple packages, separated by semicolon(;), can be 
                 specified in param-value</description>
-            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
             <param-value>com.mycompany.testws_20242.services</param-value>
         </init-param>
         <init-param>
-            <param-name>jersey.config.server.provider.scanning.recursive</param-name>
-            <param-value>false</param-value>
-        </init-param>
-        <!-- Habilitando JSON Mapping en Jersey -->
-        <init-param>
-            <param-name>jersey.config.server.disableMoxyJson</param-name>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>ServletAdaptor</servlet-name>
         <url-pattern>/webresources/*</url-pattern>
     </servlet-mapping>
-
 </web-app>
